<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBottomSheetEditor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/bottom_sheet_editor"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFullScreenEditor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/btnBottomSheetEditor"
            app:layout_constraintEnd_toEndOf="@id/btnBottomSheetEditor"
            app:layout_constraintTop_toBottomOf="@id/btnBottomSheetEditor"
            android:text="@string/full_screen_editor"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEditorHtml"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/btnBottomSheetEditor"
            app:layout_constraintEnd_toEndOf="@id/btnBottomSheetEditor"
            app:layout_constraintTop_toBottomOf="@id/btnFullScreenEditor"
            android:text="@string/editor_with_html_text"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>