<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/mainLayout"
        style="@style/Widget.MaterialComponents.BottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_sheet_bg"
        android:orientation="vertical">

        <View
            android:id="@+id/topIndicator"
            android:layout_width="42dp"
            android:layout_height="6dp"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:background="@drawable/bottom_sheet_top_indicator" />


        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="24dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/title"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ivItalic"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="24dp"
                    android:contentDescription="@null"
                    android:src="@drawable/icon_system_italic"
                    app:layout_constraintBottom_toBottomOf="@id/tvTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tvTitle" />

                <ImageView
                    android:id="@+id/ivBold"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="12dp"
                    android:contentDescription="@null"
                    android:src="@drawable/icon_system_bold"
                    app:layout_constraintBottom_toBottomOf="@id/tvTitle"
                    app:layout_constraintEnd_toStartOf="@id/ivItalic"
                    app:layout_constraintTop_toTopOf="@id/tvTitle" />

                <ImageView
                    android:id="@+id/ivList"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="12dp"
                    android:contentDescription="@null"
                    android:src="@drawable/icon_system_list"
                    app:layout_constraintBottom_toBottomOf="@id/tvTitle"
                    app:layout_constraintEnd_toStartOf="@id/ivBold"
                    app:layout_constraintTop_toTopOf="@id/tvTitle" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/inputHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/write_notes_here"
                    android:textColor="@color/text_color_disable"
                    android:textSize="16sp"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="@id/ll"
                    app:layout_constraintTop_toTopOf="@id/ll" />

                <LinearLayout
                    android:id="@+id/ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/bg_editor"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tvTitle"
                    app:layout_constraintTop_toBottomOf="@id/tvTitle">

                    <com.ex.core.RichEditor
                        android:id="@+id/editor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnNegative"
                    style="@style/Widget.ex.general.editor.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="6dp"
                    android:text="@string/cancel"
                    app:layout_constraintEnd_toStartOf="@id/btnPositive"
                    app:layout_constraintTop_toBottomOf="@id/ll" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnPositive"
                    style="@style/Widget.ex.general.editor.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/submit"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>